The most natural of vector spaces

--- a/RisingSea/CategoriesSheaves.tex
+++ b/RisingSea/CategoriesSheaves.tex
@@ -1505,7 +1505,7 @@ $$\begin{tikzcd}
 \end{tikzcd}$$
 Again, we can replace $V$ with $W$ and $\varphi$  with $\psi$ to get the same diagram. Then since the diagram commutes, we have that going across the top edge of the diagram is the same as going down the bottom edge. Noting that $V \cap A \cap U \subset A$, we know that $\varphi(V \cap A \cap U) = \psi(V \cap W \cap A \cap U)$, which gives us that $\varphi(V \cap W \cap A \cap U) = \psi(V \cap W \cap A \cap U)$, so we get the their images in $\mathscr{G}(V \cap U)$ and $\mathscr{G}(W \cap U)$  respectively restrict to the same element of $\mathscr{G}(V \cap W \cap A \cap U)$, so they have the same germ, which shows that the map we defined indeed gives a map of stalks.
 
-However, it is not the case that $\sheafhom(\mathscr{F}, \mathscr{G})_p \cong \hom(\mathscr{F}_p, \mathscr{G}_p)$. For the counterexample.
+However, it is not the case that $\sheafhom(\mathscr{F}, \mathscr{G})_p \cong \hom(\mathscr{F}_p, \mathscr{G}_p)$. For the counterexample, Fix a set $S$ and a point $p \in X$, and let $\mathscr{F}$ be the skyscraper sheaf $(i_p)_*$, and let $\mathscr{G}$ be the  constant sheaf associated to any set $A$.
 \end{proof}
 %
 \begin{exer} \enumbreak
