--- a/SpinConference/SpinConference.tex
+++ b/SpinConference/SpinConference.tex
@@ -682,7 +682,7 @@ Since $M$ will have determinant $\pm 1$, this implies that $(\det A)^2 = \pm 1$ 
 &= t^2X^TMX + t(MX + X^TM) + M
 \end{align*}
 which has linear term $MX + X^TM$, so $d\varphi_I(X) = MA + A^TM$. Therefore, we get that 
-$$\mathfrak{o}(p,q) = \set{X \in M_{p+1}\R ~:~ MX = -X^TM} $$
+$$\mathfrak{o}(p,q) = \set{X \in M_{p+q}\R ~:~ MX = -X^TM} $$
 an easy application on this identity shows that $\mathfrak{o}(p,q)$ is closed under the commutator bracket, so we get that $\mathfrak{o}(p,q)$ is a Lie algebra, as expected. In order to find out more about $\Pin(p,q)$ and $\Spin(p,q)$, we want to embed $\mathfrak{o}(p,q) = \mathfrak{so}(p,q)$ into $C_{p,q}$ with the commutator bracket (since we suspect that this is the Lie algebra for the group of units $C_{p,q}^\times$), and see what happens with the exponential map. 
 
 To do this, we're going to assume some things we haven't fully proven yet, namely that $\Pin(p,q)$ and $\Spin(p,q)$ are smooth submanifolds of $C_{p,q}$, so we can compute the compute the differential of the map
@@ -714,11 +714,33 @@ In the case that $e_i^2 \neq e_j^2$, we have that $(e_ie_j)^2 = 1$, which gives 
 (e_ie_j)^3 &= e_ie_j
 \end{align*}
 So the series becomes
-$$e^{te_ie_j} = \left( \sum_{k=1}^\infty \frac{t}{2k !} \right)  + \left( \sum_{k = 1}^\infty \frac{te_ie_j}{(2k - 1)!}\right) = \cosh t + (\sin th)e_ie_j$$
+$$e^{te_ie_j} = \left( \sum_{k=1}^\infty \frac{t}{2k !} \right)  + \left( \sum_{k = 1}^\infty \frac{te_ie_j}{(2k - 1)!}\right) = \cosh t + (\sinh t)e_ie_j$$
 which are some very nice formulas indeed!
 %
 \begin{exer}
 Continue thinking about past problems. Construct the table of Clifford algebras, continue progress on identifying matrix algebras, determining which Clifford algebras are simple, etc.
+\end{exer}
+%
+\section*{Week 8}
+%
+\begin{exer}
+Last week, we constructed an isomorphism $C_{p,q} \otimes C_{p,q}^\text{op} \to \End(C_{p,q})$. In general, there always exists a map $A \otimes A^\text{op} \to \End(A)$ given by the same map. However, this does not always define an isomorphism. What is the obstruction to this being an isomorphism? Try out on the case that $A = \R \times \R$.
+\end{exer}
+%
+\begin{exer}
+The Lie algebra is supposed to be something along the lines ``The even subalgebra of the $2$-filtered subalgebra minus the scalars." Make sense of this
+\end{exer}
+%
+\begin{exer}
+From before, we posed the question as to whether $C_{p+1,q+1}$ being a matrix algebra implied that $C_{p,q}$ was one. A more general question is that if we had that $A \otimes \End(V) \cong \End(W)$, can we conclude that $A$ is a matrix algebra? 
+\end{exer}
+%
+\begin{exer}
+Isomorphism classes of left $A$-modules, denoted $[ _A \mathsf{Mod} ]$ is a commutative monoid under direct sum. In the case of $C_{p,q}$, what monoid is this isomorphic to? First try this with complex Clifford algebras
+\end{exer}
+%
+\begin{exer}
+Given an algebra map $\varphi: A \to B$, this induces a map $[ _B \mathsf{Mod}]$, where given any $B$-module $M$, we can derive an $A$-module structure by $a \cdot m = \varphi(a) \cdot m$. In particular, we have an inclusion $C_{p,q} \hookrightarrow C_{p,q+1}$, which will give us a pullback map $[ _{C_{p,q+1}}\mathsf{Mod} ] \to [ _{C_{p,q}}\mathsf{Mod}]$. We can compute the cokernel of this map, which tells us the degree to which $C_{p,q}$ modules fail to be $C_{p,q}$-modules. Again, first try this for complex Clifford Algebras.
 \end{exer}
 %
 \end{document}
